phase 2 text alignment fixed. phase 3 creative design init

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
@@ -17,6 +17,8 @@
 }
 
 body {
+  margin-top: 72px;
+  margin-bottom: 72px;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -24,6 +26,21 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+ol, ul {
+  list-style: lower-alpha;
+}
+
+h2 {
+  font-size: xx-large;
+  font-weight: 200;
+}
+
+h3 
+{
+  font-size: x-large;
+  font-weight: 200;
 }
 
 @layer utilities {
